web-app-vue/infrastructure/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redline-app
  labels:
    app: redline-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redline-app
  template:
    metadata:
      labels:
        app: redline-app
    spec:
      containers:
        - name: redline-app
          image: ghcr.io/sombriks/redline/redline-app:2024.01.23-e5e0e82
          ports:
            - containerPort: 5000
