web-app-vue/infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redline-app
spec:
  ingressClassName: traefik
  rules:
    - host: app.redline.sombriks.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-redline-app
                port:
                  number: 3000
